--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
     />
 
     <!-- Vendor CSS Files -->
-    <link href="../Portafolio/assets/vendor/aos/aos.css" rel="stylesheet" />
+    <link href="https://github.com/sebabz/portafolio/tree/main/assets/vendor/aos/aos.css" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css" rel="stylesheet">
-    <link href="../Portafolio/assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet" />
-    <link href="../Portafolio/assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet" />
-    <link href="../Portafolio/assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet" />
+    <link href="https://github.com/sebabz/portafolio/tree/main/assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet" />
+    <link href="https://github.com/sebabz/portafolio/tree/main/assets/vendor/vendor/glightbox/css/glightbox.min.css" rel="stylesheet" />
+    <link href="https://github.com/sebabz/portafolio/tree/main/assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet" />
 
     <!-- Template Main CSS File -->
-    <link href="../Portafolio/assets/css/style.css" rel="stylesheet" />
+    <link href="https://github.com/sebabz/portafolio/tree/main/assets/css/style.css" rel="stylesheet" />
   </head>
 
   <body>
@@ -588,17 +588,17 @@
     </script>
     <!-- Vendor JS Files -->
  
-<script src="../Portafolio/assets/vendor/purecounter/purecounter.js"></script>
-<script src="../Portafolio/assets/vendor/aos/aos.js"></script>
+<script src="https://github.com/sebabz/portafolio/assets/vendor/purecounter/purecounter.js"></script>
+<script src="https://github.com/sebabz/portafolio/assets/vendor/aos/aos.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-<script src="../Portafolio/assets/vendor/glightbox/js/glightbox.min.js"></script>
-<script src="../Portafolio/assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-<script src="../Portafolio/assets/vendor/swiper/swiper-bundle.min.js"></script>
-<script src="../Portafolio/assets/vendor/typed.js/typed.min.js"></script>
-<script src="../Portafolio/assets/vendor/waypoints/noframework.waypoints.js"></script>
+<script src="https://github.com/sebabz/portafolio/assets/vendor/glightbox/js/glightbox.min.js"></script>
+<script src="https://github.com/sebabz/portafolio/assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+<script src="https://github.com/sebabz/portafolio/assets/vendor/swiper/swiper-bundle.min.js"></script>
+<script src="https://github.com/sebabz/portafolio/assets/vendor/typed.js/typed.min.js"></script>
+<script src="https://github.com/sebabz/portafolio/assets/vendor/waypoints/noframework.waypoints.js"></script>
 
 <!-- Template Main JS File -->
-<script src="../Portafolio/assets/js/main.js"></script>
+<script src=".https://github.com/sebabz/portafolio/assets/js/main.js"></script>
     
   </body>
 </html>
