--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Sebastian Provoste Furet - Developer</title>
 
     <!-- Favicons -->
-    <link href="../Portafolio/assets/img/favicon.png" rel="icon" />
-    <link href="../Portafolio/assets/img/apple-touch-icon.png" rel="apple-touch-icon" />
+    <link href="https://github.com/sebabz/portafolio/assets/img/favicon.png" rel="icon" />
+    <link href="https://github.com/sebabz/portafolio/assets/img/apple-touch-icon.png" rel="apple-touch-icon" />
 
     <!-- Google Fonts -->
     <link
@@ -17,10 +17,10 @@
     />
 
     <!-- Vendor CSS Files -->
-    <link href="https://github.com/sebabz/portafolio/tree/main/assets/vendor/aos/aos.css" rel="stylesheet" />
+    <link href="https://github.com/sebabz/portafolio/blob/main/assets/vendor/aos/aos.css" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css" rel="stylesheet">
-    <link href="https://github.com/sebabz/portafolio/tree/main/assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet" />
+    <link href="https://github.com/sebabz/portafolio/blob/main/assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet" />
     <link href="https://github.com/sebabz/portafolio/tree/main/assets/vendor/vendor/glightbox/css/glightbox.min.css" rel="stylesheet" />
     <link href="https://github.com/sebabz/portafolio/tree/main/assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet" />
 
